@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add group methods
 
 0.001005  2020-04-23 19:39:32+02:00 Europe/Vienna
     - improve exceptions for responses which contain the error message in a
